Remove handbook menu entry

There is no handbook

BUG: 390401