discover/qml/SourcesPage.qml
@@ -46,7 +46,6 @@ DiscoverPage {
             ToolButton {
                 text: i18n("Help...")
                 menu: Menu {
-                    MenuItem { action: ActionBridge { action: app.action("help_contents") } }
                     MenuItem { action: ActionBridge { action: app.action("help_about_app") } }
                     MenuItem { action: ActionBridge { action: app.action("help_report_bug") } }
                 }
